workloads/apps/vaultwarden/vaultwarden-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
  labels:
    kubernetes.io/metadata.name: vaultwarden
